// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadAgenticConfig > basic-raw-free-json 1`] = `
{
  "name": "test-basic-raw-free-json",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://jsonplaceholder.typicode.com",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
  ],
}
`;

exports[`loadAgenticConfig > basic-raw-free-ts 1`] = `
{
  "name": "test-basic-raw-free-ts",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://jsonplaceholder.typicode.com",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
  ],
}
`;

exports[`loadAgenticConfig > invalid: invalid-name-0 1`] = `[Error: Invalid project name "Test Invalid Name 0". Must be lower kebab-case with no spaces between 2 and 64 characters. Example: "my-project" or "linkedin-resolver-23"]`;

exports[`loadAgenticConfig > invalid: invalid-name-1 1`] = `[Error: Invalid project name "Test-Invalid-Name-1". Must be lower kebab-case with no spaces between 2 and 64 characters. Example: "my-project" or "linkedin-resolver-23"]`;

exports[`loadAgenticConfig > invalid: invalid-name-2 1`] = `[Error: Invalid project name "test_invalid_name_2". Must be lower kebab-case with no spaces between 2 and 64 characters. Example: "my-project" or "linkedin-resolver-23"]`;

exports[`loadAgenticConfig > invalid: invalid-name-3 1`] = `[ZodValidationError: Validation error: Required at "name"]`;

exports[`loadAgenticConfig > invalid: invalid-name-4 1`] = `[Error: Invalid project name "@foo/bar". Must be lower kebab-case with no spaces between 2 and 64 characters. Example: "my-project" or "linkedin-resolver-23"]`;

exports[`loadAgenticConfig > invalid: invalid-origin-url-0 1`] = `[Error: Invalid originUrl: must be a valid https URL]`;

exports[`loadAgenticConfig > invalid: invalid-origin-url-1 1`] = `[ZodValidationError: Validation error: Invalid url at "originUrl"]`;

exports[`loadAgenticConfig > invalid: invalid-origin-url-2 1`] = `[ZodValidationError: Validation error: Required at "originUrl"]`;

exports[`loadAgenticConfig > invalid: invalid-origin-url-3 1`] = `[ZodValidationError: Validation error: Invalid url at "originUrl"]`;

exports[`loadAgenticConfig > invalid: pricing-base-inconsistent 1`] = `[ZodValidationError: Validation error: Invalid PricingPlanLineItem "base": reserved "base" LineItems must have "licensed" usage type. at "pricingPlans[1].lineItems[0]"]`;

exports[`loadAgenticConfig > invalid: pricing-custom-inconsistent 1`] = `[Error: Invalid pricingPlans: all PricingPlans which contain the same LineItems (by slug "custom") must have the same usage type ("licensed" or "metered").]`;

exports[`loadAgenticConfig > invalid: pricing-duplicate-0 1`] = `[Error: Invalid pricingPlans: duplicate PricingPlan slugs. All PricingPlan slugs must be unique (e.g. "free", "starter-monthly", "pro-annual", etc).]`;

exports[`loadAgenticConfig > invalid: pricing-duplicate-1 1`] = `[Error: Invalid pricingPlan "basic": duplicate line-item slugs]`;

exports[`loadAgenticConfig > invalid: pricing-empty-0 1`] = `[ZodValidationError: Validation error: Must contain at least one pricing interval at "pricingIntervals"]`;

exports[`loadAgenticConfig > invalid: pricing-empty-1 1`] = `[ZodValidationError: Validation error: Array must contain at least 1 element(s) at "pricingPlans[0].lineItems"]`;

exports[`loadAgenticConfig > invalid: pricing-empty-2 1`] = `[ZodValidationError: Validation error: Must contain at least one PricingPlan at "pricingPlans"]`;

exports[`loadAgenticConfig > pricing-3-plans 1`] = `
{
  "name": "test-pricing-3-plans",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "features": [
        "Unlimited images **with watermark**",
        "No backend generation",
        "No custom templates\`",
      ],
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "features": [
        "Unlimited images **without watermark**",
        "Unlimited backend generation",
        "No custom templates",
      ],
      "interval": "month",
      "lineItems": [
        {
          "amount": 999,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Starter",
      "slug": "starter",
    },
    {
      "features": [
        "Unlimited images **without watermark**",
        "Unlimited backend generation",
        "Unlimited custom templates",
      ],
      "interval": "month",
      "lineItems": [
        {
          "amount": 2999,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Pro",
      "slug": "pro",
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-custom-0 1`] = `
{
  "name": "test-pricing-custom-0",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
    "year",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "amount": 500,
          "slug": "base",
          "usageType": "licensed",
        },
        {
          "billingScheme": "per_unit",
          "rateLimit": {
            "interval": 2592000,
            "maxPerInterval": 1000,
          },
          "slug": "custom",
          "unitAmount": 100,
          "usageType": "metered",
        },
      ],
      "name": "Basic Monthly",
      "slug": "basic-monthly",
    },
    {
      "interval": "year",
      "lineItems": [
        {
          "amount": 4800,
          "slug": "base",
          "usageType": "licensed",
        },
        {
          "billingScheme": "per_unit",
          "rateLimit": {
            "interval": 2592000,
            "maxPerInterval": 1500,
          },
          "slug": "custom",
          "unitAmount": 80,
          "usageType": "metered",
        },
      ],
      "name": "Basic Annual",
      "slug": "basic-annual",
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-freemium 1`] = `
{
  "name": "test-pricing-freemium",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "amount": 499,
          "slug": "base",
          "usageType": "licensed",
        },
      ],
      "name": "Basic",
      "slug": "basic",
      "trialPeriodDays": 7,
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-monthly-annual 1`] = `
{
  "name": "test-pricing-monthly-annual",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
    "year",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "custom",
          "usageType": "licensed",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "amount": 100,
          "slug": "custom",
          "usageType": "licensed",
        },
      ],
      "name": "Basic Monthly",
      "slug": "basic-monthly",
    },
    {
      "interval": "year",
      "lineItems": [
        {
          "amount": 70,
          "slug": "custom",
          "usageType": "licensed",
        },
      ],
      "name": "Basic Annual",
      "slug": "basic-annual",
    },
  ],
}
`;

exports[`loadAgenticConfig > pricing-pay-as-you-go 1`] = `
{
  "name": "test-pricing-pay-as-you-go",
  "originAdapter": {
    "location": "external",
    "type": "raw",
  },
  "originUrl": "https://httpbin.org",
  "pricingIntervals": [
    "month",
  ],
  "pricingPlans": [
    {
      "lineItems": [
        {
          "amount": 0,
          "slug": "base",
          "usageType": "licensed",
        },
        {
          "billingScheme": "per_unit",
          "rateLimit": {
            "interval": 86400,
            "maxPerInterval": 20,
          },
          "slug": "requests",
          "unitAmount": 0,
          "usageType": "metered",
        },
      ],
      "name": "Free",
      "slug": "free",
    },
    {
      "interval": "month",
      "lineItems": [
        {
          "billingScheme": "tiered",
          "slug": "requests",
          "tiers": [
            {
              "unitAmount": 0.467,
              "upTo": 999,
            },
            {
              "unitAmount": 0.053,
              "upTo": "inf",
            },
          ],
          "tiersMode": "volume",
          "usageType": "metered",
        },
      ],
      "name": "Pay-As-You-Go",
      "slug": "pay-as-you-go",
    },
  ],
}
`;
